// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-center searchable"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center searchable_header"
  >
    <div
      className="flex-60 layput-row layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-none layout-row layout-align-start-center"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={1}
              text="Trucking Cities"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <Tooltip
            color=""
            icon="ICON"
            text="TOOLTIP"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            toolText={true}
          />
        </div>
      </div>
    </div>
    <div
      className="input_box flex-40 layput-row layout-align-start-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search trucking Cities"
        type="text"
      />
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-start-center "
  >
    <div
      className="layout-row flex-none layout-align-start-center layout-wrap"
    />
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        See all
      </p>
    </div>
  </div>
</div>
`;

exports[`when icon is empty string 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-center searchable"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center searchable_header"
  >
    <div
      className="flex-60 layput-row layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-none layout-row layout-align-start-center"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={1}
              text="Trucking Cities"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="input_box flex-40 layput-row layout-align-start-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search trucking Cities"
        type="text"
      />
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-start-center "
  >
    <div
      className="layout-row flex-none layout-align-start-center layout-wrap"
    />
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        See all
      </p>
    </div>
  </div>
</div>
`;

exports[`when showTooltip is false 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-center searchable"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center searchable_header"
  >
    <div
      className="flex-60 layput-row layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-none layout-row layout-align-start-center"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={1}
              text="Trucking Cities"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <Tooltip
            color=""
            icon="ICON"
            text="TOOLTIP"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            toolText={true}
          />
        </div>
      </div>
    </div>
    <div
      className="input_box flex-40 layput-row layout-align-start-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search trucking Cities"
        type="text"
      />
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-start-center "
  >
    <div
      className="layout-row flex-none layout-align-start-center layout-wrap"
    />
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        See all
      </p>
    </div>
  </div>
</div>
`;

exports[`when truckings.length < 3 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-center searchable"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center searchable_header"
  >
    <div
      className="flex-60 layput-row layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-none layout-row layout-align-start-center"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={1}
              text="Trucking Cities"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <Tooltip
            color=""
            icon="ICON"
            text="TOOLTIP"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            toolText={true}
          />
        </div>
      </div>
    </div>
    <div
      className="input_box flex-40 layput-row layout-align-start-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search trucking Cities"
        type="text"
      />
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-start-center "
  >
    <div
      className="layout-row flex-none layout-align-start-center layout-wrap"
    >
      <AdminNexusTile
        handleClick={[Function]}
        key="RANDOM_KEY_0"
        nexus="NEXUS_0"
        showTooltip={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        tooltip="A glance of all the Hubs that are related to the chosen Hub"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        See all
      </p>
    </div>
  </div>
</div>
`;

exports[`when truckings.length > 3 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-center searchable"
>
  <div
    className="flex-100 layout-row layout-align-space-between-center searchable_header"
  >
    <div
      className="flex-60 layput-row layout-align-start-center"
    >
      <div
        className="flex-100 layout-row layout-align-space-between-center"
      >
        <div
          className="flex-none layout-row layout-align-start-center"
        >
          <div
            className="flex-none"
          >
            <TextHeading
              color=""
              size={1}
              text="Trucking Cities"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <Tooltip
            color=""
            icon="ICON"
            text="TOOLTIP"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
            toolText={true}
          />
        </div>
      </div>
    </div>
    <div
      className="input_box flex-40 layput-row layout-align-start-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search trucking Cities"
        type="text"
      />
    </div>
  </div>
  <div
    className="layout-row flex-100 layout-align-start-center slider_container"
  >
    <div
      className="layout-row flex-none layout-align-start-center slider_inner"
    >
      <AdminNexusTile
        handleClick={[Function]}
        key="RANDOM_KEY_1"
        nexus="NEXUS_0"
        showTooltip={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        tooltip="A glance of all the Hubs that are related to the chosen Hub"
      />
      <AdminNexusTile
        handleClick={[Function]}
        key="RANDOM_KEY_2"
        nexus="NEXUS_1"
        showTooltip={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        tooltip="A glance of all the Hubs that are related to the chosen Hub"
      />
      <AdminNexusTile
        handleClick={[Function]}
        key="RANDOM_KEY_3"
        nexus="NEXUS_2"
        showTooltip={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        tooltip="A glance of all the Hubs that are related to the chosen Hub"
      />
      <AdminNexusTile
        handleClick={[Function]}
        key="RANDOM_KEY_4"
        nexus="NEXUS_3"
        showTooltip={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        tooltip="A glance of all the Hubs that are related to the chosen Hub"
      />
      <AdminNexusTile
        handleClick={[Function]}
        key="RANDOM_KEY_5"
        nexus="NEXUS_4"
        showTooltip={true}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
        tooltip="A glance of all the Hubs that are related to the chosen Hub"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-row layout-align-end-center"
  >
    <div
      className="flex-none layout-row layout-align-center-center"
      onClick={[Function]}
    >
      <p
        className="flex-none"
      >
        See all
      </p>
    </div>
  </div>
</div>
`;
